--- a/src/language/zh.json
+++ b/src/language/zh.json
@@ -37,17 +37,17 @@
     "text": "水印",
     "modalTitle": "配置水印",
     "setting": {
-        "name": "水印名称",
-        "size": "水印大小",
-        "angle": "水印角度",
-        "position": {
-            "label": "水印位置",
-            "lt": "左上角",
-            "rt": "右上角",
-            "lb": "左下角",
-            "rb": "右下角",
-            "full": "平铺"
-        }
+      "name": "水印名称",
+      "size": "水印大小",
+      "angle": "水印角度",
+      "position": {
+        "label": "水印位置",
+        "lt": "左上角",
+        "rt": "右上角",
+        "lb": "左下角",
+        "rb": "右下角",
+        "full": "平铺"
+      }
     }
   },
   "material": {
@@ -116,7 +116,7 @@
   },
   "history": {
     "revocation": "撤销",
-    "redo": "重做"
+    "redo": "恢复"
   },
   "upload_background": "上传背景",
   "mouseMenu": {
