feat: 多语言支持繁体中文、葡萄言语、日语以及其他多语言适配

--- a/src/language/en.json
+++ b/src/language/en.json
@@ -4,12 +4,13 @@
   "background": "Background",
   "placeholder": "Please input",
   "size": "Size",
+  "adjustSize": "Adjust Size",
   "width": "Width",
   "height": "Height",
   "grid": "Grid",
   "common_elements": "Common Elements",
   "draw_elements": "Draw Elements",
-  "color_macthing": "Macthing",
+  "color_matching": "Macthing",
   "background_texture": "Background Texture",
   "picture": "picture",
   "everything_is_fine": "Everything is fine",
@@ -32,7 +33,7 @@
   "file": "file",
   "import_files": "Import files",
   "select_json": "Select JSON",
-  "repleaceImg": "repleace Image",
+  "replaceImg": "repleace Image",
   "waterMark": {
     "text": "WaterMark",
     "modalTitle": "WaterMark Setting",
