--- a/src/language/pt.json
+++ b/src/language/pt.json
@@ -3,12 +3,13 @@
   "elements": "Elementos",
   "background": "Fundo",
   "size": "Tamanho",
+  "adjustSize": "Ajustar o tamanho",
   "width": "Largura",
   "height": "Altura",
   "grid": "Grid",
   "common_elements": "Elementos comuns",
   "draw_elements": "Elementos arrastre",
-  "color_macthing": "Seleção de cor",
+  "color_matching": "Seleção de cor",
   "background_texture": "Textura de fundo",
   "picture": "Imagem",
   "everything_is_fine": "Está tudo bem",
