--- a/src/language/zh.json
+++ b/src/language/zh.json
@@ -3,13 +3,14 @@
   "elements": "元素",
   "background": "背景",
   "size": "尺寸",
+  "adjustSize": "调整尺寸",
   "width": "宽度",
   "height": "高度",
   "grid": "网格",
   "placeholder": "请输入",
   "common_elements": "基础要素",
   "draw_elements": "绘制元素",
-  "color_macthing": "配色",
+  "color_matching": "配色",
   "background_texture": "背景纹理",
   "picture": "图片",
   "everything_is_fine": "万事大吉",
@@ -32,7 +33,7 @@
   "file": "文件",
   "import_files": "导入文件",
   "select_json": "选择JSON文件",
-  "repleaceImg": "替换图片",
+  "replaceImg": "替换图片",
   "waterMark": {
     "text": "水印",
     "modalTitle": "配置水印",
