feat: 1. 程序界面调整 2. 代码逻辑优化调整

--- a/src/language/jp.json
+++ b/src/language/jp.json
@@ -18,11 +18,11 @@
   "default_size": "デフォルトサイズ",
   "preview": "プレビュー",
   "empty": "クリア",
-  "keep": "保存",
+  "keep": "导出",
   "copy_to_clipboard": "クリップボードにコピー",
-  "save_as_picture": "画像として保存",
-  "save_as_svg": "SVGとして保存",
-  "save_as_json": "JSONとして保存",
+  "save_as_picture": "画像として导出",
+  "save_as_svg": "SVGとして导出",
+  "save_as_json": "JSONとして导出",
   "layers": "レイヤー",
   "title_template": "タイトルテンプレート",
   "insert_svg": "SVG要素をインポート",
