--- a/src/language/tw.json
+++ b/src/language/tw.json
@@ -19,11 +19,11 @@
   "default_size": "預設尺寸",
   "preview": "預覽",
   "empty": "清空",
-  "keep": "保存",
+  "keep": "导出",
   "copy_to_clipboard": "復制到剪切板",
-  "save_as_picture": "保存為圖片",
-  "save_as_svg": "保存為SVG",
-  "save_as_json": "保存為JSON",
+  "save_as_picture": "导出為圖片",
+  "save_as_svg": "导出為SVG",
+  "save_as_json": "导出為JSON",
   "layers": "圖層",
   "title_template": "標題模版",
   "insert_svg": "導入SVG元素",
