--- a/src/language/zh.json
+++ b/src/language/zh.json
@@ -19,11 +19,11 @@
   "default_size": "预设尺寸",
   "preview": "预览",
   "empty": "清空",
-  "keep": "保存",
+  "keep": "导出",
   "copy_to_clipboard": "复制到剪切板",
-  "save_as_picture": "保存为图片",
-  "save_as_svg": "保存为SVG",
-  "save_as_json": "保存为JSON",
+  "save_as_picture": "导出为图片",
+  "save_as_svg": "导出为SVG",
+  "save_as_json": "导出为JSON",
   "layers": "图层",
   "title_template": "标题模板",
   "insert_svg": "导入SVG元素",
